--- a/svm.ipynb
+++ b/svm.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -415,9 +415,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Naive loss: 9.166062e+00 computed in 0.116018s\n",
-      "Vectorized loss: 0.000000e+00 computed in 0.000083s\n",
-      "difference: 9.166062\n"
+      "Naive loss: 9.166062e+00 computed in 0.104469s\n",
+      "Vectorized loss: 9.166062e+00 computed in 0.001987s\n",
+      "difference: -0.000000\n"
      ]
     }
    ],
@@ -441,11 +441,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive loss and gradient: computed in 0.102787s\n",
+      "Vectorized loss and gradient: computed in 0.002197s\n",
+      "difference: 2802.376575\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of svm_loss_vectorized, and compute the gradient\n",
     "# of the loss function in a vectorized way.\n",
