--- a/two_layer_net.ipynb
+++ b/two_layer_net.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -98,6 +98,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(5, 3)\n",
+      "5 4 10 3\n",
       "Your scores:\n",
       "[[-0.81233741 -1.27654624 -0.70335995]\n",
       " [-0.17129677 -1.18803311 -0.47310444]\n",
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -189,20 +191,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 3)\n",
-      "(3,)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (3,) (4,) (3,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-48-628dfd89c69f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# analytic gradients should be less than 1e-8 for each of W1, W2, b1, and b2.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrads\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.05\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# these should all be less than 1e-8 or so\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/amin/Dropbox/Others/OnlineCourses/DeepLearning/assignment1/cs231n/classifiers/neural_net.py\u001b[0m in \u001b[0;36mloss\u001b[0;34m(self, X, y, reg)\u001b[0m\n\u001b[1;32m    135\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m     \u001b[0mAA\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdW\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 137\u001b[0;31m     \u001b[0mgrads\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'b2'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdW\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    138\u001b[0m     \u001b[0mgrads\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'W1'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mreg\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mW1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    139\u001b[0m     \u001b[0mgrads\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'W2'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mreg\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mW2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,) (4,) (3,) "
+      "[ 0.2099691 -0.1431905 -0.0667786]\n",
+      "[ 0.2099691 -0.1431905 -0.0667786]\n",
+      "b2 max relative error: 3.865028e-11\n",
+      "[[ -5.13764691e-01   1.67232930e-01   3.04783350e-01]\n",
+      " [  1.95077539e-02  -5.09652183e-03  -4.38074301e-03]\n",
+      " [  2.92229174e-01   1.18896894e-01  -4.32018096e-01]\n",
+      " [ -2.33121075e-01   1.86288200e-01   3.96198312e-02]\n",
+      " [  7.78174796e-01  -3.54233027e-01  -4.41137965e-01]\n",
+      " [  4.28331870e-03   6.65172228e-04   3.02471899e-03]\n",
+      " [ -6.34322093e-03  -3.62741166e-03  -6.72460447e-03]\n",
+      " [  6.17281609e-02  -1.29900489e-01   3.91825079e-02]\n",
+      " [  6.32053946e-01  -8.44023524e-02  -5.66197124e-01]\n",
+      " [  8.89334995e-01  -6.04709348e-01  -2.88551353e-01]]\n",
+      "[[ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]]\n",
+      "W2 max relative error: 1.000000e+00\n"
      ]
     }
    ],
@@ -219,6 +231,8 @@
     "for param_name in grads:\n",
     "    f = lambda W: net.loss(X, y, reg=0.05)[0]\n",
     "    param_grad_num = eval_numerical_gradient(f, net.params[param_name], verbose=False)\n",
+    "    print(param_grad_num)\n",
+    "    print(grads[param_name])\n",
     "    print('%s max relative error: %e' % (param_name, rel_error(param_grad_num, grads[param_name])))"
    ]
   },
