--- a/two_layer_net.ipynb
+++ b/two_layer_net.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -204,17 +204,21 @@
       " [  6.17281609e-02  -1.29900489e-01   3.91825079e-02]\n",
       " [  6.32053946e-01  -8.44023524e-02  -5.66197124e-01]\n",
       " [  8.89334995e-01  -6.04709348e-01  -2.88551353e-01]]\n",
-      "[[ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]\n",
-      " [ 0.  0.  0.]]\n",
-      "W2 max relative error: 1.000000e+00\n"
+      "[[ -5.13764691e-01   1.67232930e-01   3.04783350e-01]\n",
+      " [  1.95077540e-02  -5.09652182e-03  -4.38074302e-03]\n",
+      " [  2.92229174e-01   1.18896894e-01  -4.32018096e-01]\n",
+      " [ -2.33121075e-01   1.86288200e-01   3.96198312e-02]\n",
+      " [  7.78174796e-01  -3.54233027e-01  -4.41137965e-01]\n",
+      " [  4.28331871e-03   6.65172224e-04   3.02471898e-03]\n",
+      " [ -6.34322094e-03  -3.62741166e-03  -6.72460448e-03]\n",
+      " [  6.17281609e-02  -1.29900489e-01   3.91825079e-02]\n",
+      " [  6.32053946e-01  -8.44023525e-02  -5.66197124e-01]\n",
+      " [  8.89334995e-01  -6.04709349e-01  -2.88551353e-01]]\n",
+      "W2 max relative error: 3.440708e-09\n",
+      "[-0.0070484   0.          0.00310494 -0.0072399  -0.00573377  0.          0.\n",
+      " -0.0024372   0.04121605  0.02236176]\n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      "b1 max relative error: 1.000000e+00\n"
      ]
     }
    ],
